tests/lang/frontend/lexer/unterminated-comment.cxy
// @TEST: FileCheck

// CHECK: error: unterminated block comment
// CHECK: [[@LINE+1]] |/*
/*
 This comment is unterminated
